- Changed submodules naming (capitalized names and splitted some modules)
- Added pluggining system
- Made GET|POST|SERVER|COOKIE read-only
- Blocked __builtins__ access
- Session Plugin
- Templating system became a plugin
- Improved Cookie system
- A more "lazy" code and minor optimization